--- a/styles/reset.css
+++ b/styles/reset.css
@@ -29,9 +29,9 @@
 
 
 .splide__slide{
-    background-color: #31313100 !important;
-    box-shadow: 10px -1px 0px 0px #353535;
+    background-color: #313131c5 !important;
     border-radius: 10px;
-    margin: 10px;
-    margin-top: 20px;
+    margin: 20px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
