--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-color: rgb(61, 61, 61) !important;
+    background-image: url(../img/fundo.png) !important;
 }
 
 .nav-menu{
@@ -83,6 +83,15 @@ body{
     position: absolute;
 }
 
+.sobre{
+    background-color: rgb(66, 66, 66);
+    padding: 15px;
+    border-radius: 10px 10px 0px 0px; 
+    color: rgb(137, 137, 137) !important;
+    font-size: 12px;
+    width: 480px;
+}
+
 /* 
 main{
     margin: 50px 0px 50px 0px ;
@@ -96,6 +105,7 @@ main{
     border-radius: 30px!important;
     box-shadow: 1px 5px 60px 0px #1d1d1dcc;
     padding: 10px;
+    margin-left: 40px;
    }
    
    .card .card-border-top {
@@ -183,6 +193,10 @@ main{
         border-radius: 0px 0px 15px 15px;
        }
 
+       .card{
+        margin-left: -10px;
+       }
+
    .card span {
     font-weight: 600;
     color: white;
@@ -206,6 +220,11 @@ main{
     margin-bottom: 40px !important;
     font-size: 13px;
    }
+
+   .sobre{
+    width: 100%;
+}
+
    
        
    }
